--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ deepdiff = "*"
 cryptography = "*"
 jinja2 = "*"
 jmespath = "*"
-pynetbox = "^7"
+pynetbox = "*"
 pytest = "*"
 pytest-mock = "*"
 pytest-xdist = "*"
