--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ deepdiff = "*"
 cryptography = "*"
 jinja2 = "*"
 jmespath = "*"
-pynetbox = "*"
+pynetbox = "^7.3"
 pytest = "*"
 pytest-mock = "*"
 pytest-xdist = "*"
