Fix content_type/object_type in custom link

--- a/tests/integration/targets/v4.0/tasks/netbox_custom_link.yml
+++ b/tests/integration/targets/v4.0/tasks/netbox_custom_link.yml
@@ -9,7 +9,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_types:
+      object_types:
         - "dcim.device"
       name: Custom Link
       link_text: Open Web management
@@ -24,7 +24,7 @@
       - test_one['diff']['before']['state'] == "absent"
       - test_one['diff']['after']['state'] == "present"
       - test_one['custom_link']['name'] == "Custom Link"
-      - test_one['custom_link']['content_types'] == ["dcim.device"]
+      - test_one['custom_link']['object_types'] == ["dcim.device"]
       - test_one['custom_link']['link_text'] == "Open Web management"
       - test_one['msg'] == "custom_link Custom Link created"
 
@@ -33,7 +33,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_types:
+      object_types:
         - "dcim.device"
       name: Custom Link
       link_text: Open Web management
@@ -53,7 +53,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_types:
+      object_types:
         - "dcim.device"
       name: Custom Link
       link_text: Open Web management
@@ -75,7 +75,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_types:
+      object_types:
         - "virtualization.virtualmachine"
       name: Custom Link
       link_text: Open Web management
@@ -87,7 +87,7 @@
   assert:
     that:
       - test_four is changed
-      - test_four['diff']['after']['content_types'] == ["virtualization.virtualmachine"]
+      - test_four['diff']['after']['object_types'] == ["virtualization.virtualmachine"]
       - test_four['custom_link']['name'] == "Custom Link"
       - test_four['msg'] == "custom_link Custom Link updated"
 
@@ -96,7 +96,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_types:
+      object_types:
         - "virtualization.virtualmachine"
       name: Custom Link
       link_text: Open Web management
