--- a/tests/integration/targets/v4.0/tasks/netbox_export_template.yml
+++ b/tests/integration/targets/v4.0/tasks/netbox_export_template.yml
@@ -9,7 +9,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_types:
+      object_types:
         - "dcim.device"
       name: Example Export Template
       description: Export Devices
@@ -25,7 +25,7 @@
       - test_one['diff']['before']['state'] == "absent"
       - test_one['diff']['after']['state'] == "present"
       - test_one['export_template']['name'] == "Example Export Template"
-      - test_one['export_template']['content_types'] == ["dcim.device"]
+      - test_one['export_template']['object_types'] == ["dcim.device"]
       - test_one['export_template']['description'] == "Export Devices"
       - test_one['msg'] == "export_template Example Export Template created"
 
@@ -34,7 +34,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_types:
+      object_types:
         - "dcim.device"
       name: Example Export Template
       description: Export Devices
@@ -55,7 +55,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_types:
+      object_types:
         - "dcim.device"
       name: Example Export Template
       description: Export Devices
@@ -78,7 +78,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_types:
+      object_types:
         - "virtualization.virtualmachine"
       name: Example Export Template
       description: Export Devices
@@ -91,7 +91,7 @@
   assert:
     that:
       - test_four is changed
-      - test_four['diff']['after']['content_types'] == ["virtualization.virtualmachine"]
+      - test_four['diff']['after']['object_types'] == ["virtualization.virtualmachine"]
       - test_four['export_template']['name'] == "Example Export Template"
       - test_four['msg'] == "export_template Example Export Template updated"
 
@@ -100,7 +100,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_types:
+      object_types:
         - "virtualization.virtualmachine"
       name: Example Export Template
       description: Export Devices
