--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ concurrency:
 
 on:  # yamllint disable-line rule:truthy
   pull_request:
-    branches: [main, devel]
+    branches: [master, devel]
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
