--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -726,6 +726,8 @@ releases:
         `#1243 <https://github.com/netbox-community/ansible_modules/issues/1243>`_
       - Update CI process to follow Ansible Collection Standards `#1247 <https://github.com/netbox-community/ansible_modules/issues/1247>`_
       - Update CI to use master instead of main. `#1253 <https://github.com/netbox-community/ansible_modules/issues/1253>`_
+      - Update ansible-lint to ignore changelog file for yaml indentation. `#1256
+        <https://github.com/netbox-community/ansible_modules/issues/1256>`_
       - Update top-level README with new minimum Ansible version (sequence after `#1241
         <https://github.com/netbox-community/ansible_modules/issues/1241>`_ `#1244
         <https://github.com/netbox-community/ansible_modules/issues/1244>`_
@@ -739,6 +741,7 @@ releases:
     - housekeeping.yml
     - issue_1249.yml
     - issue_1253.yml
+    - issue_1256.yml
     release_date: '2024-05-28'
   3.2.0:
     changes:
