feat: Add netbox_tunnel to action_groups
This commit adds `netbox_tunnel` to the `action_groups` list in the `runtime.yml` file. This change ensures that the `netbox_tunnel` action group is included in the NetBox integration tests.

--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -78,6 +78,7 @@ action_groups:
     - netbox_tag
     - netbox_tenant
     - netbox_tenant_group
+    - netbox_tunnel
     - netbox_virtual_chassis
     - netbox_virtual_machine
     - netbox_vlan
