feat: Add netbox_tunnel_group code

--- a/tests/integration/targets/v4.0/tasks/main.yml
+++ b/tests/integration/targets/v4.0/tasks/main.yml
@@ -337,3 +337,12 @@
         - netbox_tunnel
   tags:
     - netbox_tunnel
+
+- name: NETBOX_TUNNEL GROUP TESTS
+  ansible.builtin.include_tasks:
+    file: netbox_tunnel_group.yml
+    apply:
+      tags:
+        - netbox_tunnel_group
+  tags:
+    - netbox_tunnel_group
