--- a/tests/integration/targets/v4.0/tasks/main.yml
+++ b/tests/integration/targets/v4.0/tasks/main.yml
@@ -161,6 +161,9 @@
 - name: NETBOX_USER TESTS
   ansible.builtin.include_tasks: netbox_user.yml
 
+- name: NETBOX_USER_GROUP TESTS
+  ansible.builtin.include_tasks: netbox_user_group.yml
+
 # Module has to be updated for 3.3
 # - name: "NETBOX_CABLE TESTS"
 #  include_tasks: "netbox_cable.yml"
