--- a/tests/integration/targets/v4.0/tasks/netbox_permission.yml
+++ b/tests/integration/targets/v4.0/tasks/netbox_permission.yml
@@ -9,7 +9,7 @@
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
-      name: Test Permission
+      name: Test Permission 1
       actions:
         - view
       object_types: []
@@ -22,15 +22,15 @@
       - test_one is changed
       - test_one['diff']['before']['state'] == "absent"
       - test_one['diff']['after']['state'] == "present"
-      - test_one['permission']['name'] == "Test Permission"
-      - test_one['msg'] == "permission Test Permission created"
+      - test_one['permission']['name'] == "Test Permission 1"
+      - test_one['msg'] == "permission Test Permission 1 created"
 
 - name: "PERMISSION 2: Create duplicate"
   netbox.netbox.netbox_permission:
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
-      name: Test Permission
+      name: Test Permission 1
       actions:
         - view
       object_types: []
@@ -41,15 +41,15 @@
   ansible.builtin.assert:
     that:
       - not test_two['changed']
-      - test_two['permission']['name'] == "Test Permission"
-      - test_two['msg'] == "permission Test Permission already exists"
+      - test_two['permission']['name'] == "Test Permission 1"
+      - test_two['msg'] == "permission Test Permission 1 already exists"
 
 - name: "PERMISSION 3: Update"
   netbox.netbox.netbox_permission:
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
-      name: Test Permission
+      name: Test Permission 1
       description: The test permission
       enabled: false
       actions:
@@ -71,32 +71,53 @@
     that:
       - test_three is changed
       - test_three['diff']['after']['description'] == "The test permission"
-      - test_three['permission']['name'] == "Test Permission"
+      - test_three['permission']['name'] == "Test Permission 1"
       - test_three['permission']['description'] == "The test permission"
       - test_three['permission']['enabled'] == False
       - test_three['permission']['actions'] == ["view", "add", "change", "delete", "extreme_administration"]
       - test_three['permission']['object_types'] == ["vpn.tunneltermination", "wireless.wirelesslan"]
       - test_three['permission']['constraints']["name"] == "Foo"
-      - test_three['msg'] == "permission Test Permission updated"
+      - test_three['msg'] == "permission Test Permission 1 updated"
 
-- name: "PERMISSION 4: Add permission to group"
+- name: "PERMISSION 4: Create second permission"
+  netbox.netbox.netbox_permission:
+    netbox_url: http://localhost:32768
+    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    data:
+      name: Test Permission 2
+      actions:
+        - view
+      object_types: []
+    state: present
+  register: test_four
+
+- name: "PERMISSION 4: Create second permission"
+  ansible.builtin.assert:
+    that:
+      - test_four is changed
+      - test_four['diff']['before']['state'] == "absent"
+      - test_four['diff']['after']['state'] == "present"
+      - test_four['permission']['name'] == "Test Permission 2"
+      - test_four['msg'] == "permission Test Permission 2 created"
+
+- name: "PERMISSION 5: Add permission to group"
   netbox.netbox.netbox_user_group:
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
       name: Test User Group
       permissions:
-        - Test Permission
+        - Test Permission 1
     state: present
-  register: test_four
+  register: test_five
 
-- name: "PERMISSION 4: ASSERT - Add permission to group"
+- name: "PERMISSION 5: ASSERT - Add permission to group"
   ansible.builtin.assert:
     that:
-      - test_four is changed
-      - test_four['user_group']['permissions'] == [1]
+      - test_five is changed
+      - test_five['user_group']['permissions'] == [1]
 
-- name: "PERMISSION 5: Add permission to user"
+- name: "PERMISSION 6: Add permission to user"
   netbox.netbox.netbox_user:
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
@@ -104,45 +125,45 @@
       username: TestUser
       password: TestPassword
       permissions:
-        - Test Permission
+        - Test Permission 2
     state: present
-  register: test_five
-
-- name: "PERMISSION 5: ASSERT - Add permission to user"
-  ansible.builtin.assert:
-    that:
-      - test_five is changed
-      - test_five['user']['permissions'] == [1]
-
-- name: "PERMISSION 6: Delete"
-  netbox.netbox.netbox_permission:
-    netbox_url: http://localhost:32768
-    netbox_token: "0123456789abcdef0123456789abcdef01234567"
-    data:
-      name: Test Permission
-    state: absent
   register: test_six
 
-- name: "PERMISSION 6: ASSERT - Delete"
+- name: "PERMISSION 6: ASSERT - Add permission to user"
   ansible.builtin.assert:
     that:
       - test_six is changed
-      - test_six['diff']['before']['state'] == "present"
-      - test_six['diff']['after']['state'] == "absent"
-      - test_six['msg'] == "permission Test Permission deleted"
+      - test_six['user']['permissions'] == [2]
 
-- name: "PERMISSION 7: ASSERT - Delete non existing"
+- name: "PERMISSION 7: Delete"
   netbox.netbox.netbox_permission:
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
-      name: Test Permission
+      name: Test Permission 1
     state: absent
   register: test_seven
 
-- name: "PERMISSION 7: ASSERT - Delete non existing`"
+- name: "PERMISSION 7: ASSERT - Delete"
   ansible.builtin.assert:
     that:
-      - not test_seven['changed']
-      - test_seven['permission'] == None
-      - test_seven['msg'] == "permission Test Permission already absent"
+      - test_seven is changed
+      - test_seven['diff']['before']['state'] == "present"
+      - test_seven['diff']['after']['state'] == "absent"
+      - test_seven['msg'] == "permission Test Permission 1 deleted"
+
+- name: "PERMISSION 8: Delete non existing"
+  netbox.netbox.netbox_permission:
+    netbox_url: http://localhost:32768
+    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    data:
+      name: Test Permission 1
+    state: absent
+  register: test_eight
+
+- name: "PERMISSION 8: ASSERT - Delete non existing`"
+  ansible.builtin.assert:
+    that:
+      - not test_eight['changed']
+      - test_eight['permission'] == None
+      - test_eight['msg'] == "permission Test Permission 1 already absent"
