Correctly generate query parameters for lists of groups and permissions

--- a/tests/integration/targets/v4.0/tasks/netbox_permission.yml
+++ b/tests/integration/targets/v4.0/tasks/netbox_permission.yml
@@ -9,7 +9,7 @@
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
-      name: Test Permission 1
+      name: Test Permission
       actions:
         - view
       object_types: []
@@ -22,15 +22,15 @@
       - test_one is changed
       - test_one['diff']['before']['state'] == "absent"
       - test_one['diff']['after']['state'] == "present"
-      - test_one['permission']['name'] == "Test Permission 1"
-      - test_one['msg'] == "permission Test Permission 1 created"
+      - test_one['permission']['name'] == "Test Permission"
+      - test_one['msg'] == "permission Test Permission created"
 
 - name: "PERMISSION 2: Create duplicate"
   netbox.netbox.netbox_permission:
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
-      name: Test Permission 1
+      name: Test Permission
       actions:
         - view
       object_types: []
@@ -41,15 +41,15 @@
   ansible.builtin.assert:
     that:
       - not test_two['changed']
-      - test_two['permission']['name'] == "Test Permission 1"
-      - test_two['msg'] == "permission Test Permission 1 already exists"
+      - test_two['permission']['name'] == "Test Permission"
+      - test_two['msg'] == "permission Test Permission already exists"
 
 - name: "PERMISSION 3: Update"
   netbox.netbox.netbox_permission:
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
-      name: Test Permission 1
+      name: Test Permission
       description: The test permission
       enabled: false
       actions:
@@ -71,13 +71,13 @@
     that:
       - test_three is changed
       - test_three['diff']['after']['description'] == "The test permission"
-      - test_three['permission']['name'] == "Test Permission 1"
+      - test_three['permission']['name'] == "Test Permission"
       - test_three['permission']['description'] == "The test permission"
       - test_three['permission']['enabled'] == False
       - test_three['permission']['actions'] == ["view", "add", "change", "delete", "extreme_administration"]
       - test_three['permission']['object_types'] == ["vpn.tunneltermination", "wireless.wirelesslan"]
       - test_three['permission']['constraints']["name"] == "Foo"
-      - test_three['msg'] == "permission Test Permission 1 updated"
+      - test_three['msg'] == "permission Test Permission updated"
 
 - name: "PERMISSION 4: Create second permission"
   netbox.netbox.netbox_permission:
@@ -107,7 +107,7 @@
     data:
       name: Test User Group
       permissions:
-        - Test Permission 1
+        - Test Permission
     state: present
   register: test_five
 
@@ -140,7 +140,7 @@
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
-      name: Test Permission 1
+      name: Test Permission
     state: absent
   register: test_seven
 
@@ -150,14 +150,14 @@
       - test_seven is changed
       - test_seven['diff']['before']['state'] == "present"
       - test_seven['diff']['after']['state'] == "absent"
-      - test_seven['msg'] == "permission Test Permission 1 deleted"
+      - test_seven['msg'] == "permission Test Permission deleted"
 
 - name: "PERMISSION 8: Delete non existing"
   netbox.netbox.netbox_permission:
     netbox_url: http://localhost:32768
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
-      name: Test Permission 1
+      name: Test Permission
     state: absent
   register: test_eight
 
@@ -166,4 +166,4 @@
     that:
       - not test_eight['changed']
       - test_eight['permission'] == None
-      - test_eight['msg'] == "permission Test Permission 1 already absent"
+      - test_eight['msg'] == "permission Test Permission already absent"
