--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
           cd netbox-docker
           git checkout ${{ matrix.NETBOX_DOCKER_VERSION }}
           cp $GITHUB_WORKSPACE/tests/netbox-docker/${{ matrix.VERSION }}/docker-compose.override.yml docker-compose.override.yml
-          docker-compose up -d --quiet-pull netbox netbox-worker postgres redis redis-cache
+          docker compose up -d --quiet-pull netbox netbox-worker postgres redis redis-cache
           docker container ls
           cd ..
 
@@ -112,7 +112,7 @@ jobs:
       - name: Wait for NetBox to be available
         run: |
           docker container ls
-          docker logs netbox-docker_netbox_1
+          docker logs netbox-docker-netbox-1
           timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:32768)" != "200" ]]; do echo "waiting for NetBox"; sleep 5; done' || false
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
         #if: matrix.VERSION == 'v3.3'
