--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "GPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-ansible-core = "2.15.9"
+ansible-core = "^2.16"
 black = "*"
 codecov = "*"
 coverage = "6.5.*"
