--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.10"
 ansible-core = "^2.16"
 black = "*"
 codecov = "*"
-coverage = "*"
+coverage = "7.3.2"
 deepdiff = "*"
 cryptography = "*"
 jinja2 = "*"
