Adjust for rack type

--- a/tests/integration/targets/v4.1/tasks/main.yml
+++ b/tests/integration/targets/v4.1/tasks/main.yml
@@ -33,7 +33,13 @@
   ansible.builtin.include_tasks: netbox_tenant_group.yml
 
 - name: NETBOX_RACK TESTS
-  ansible.builtin.include_tasks: netbox_rack.yml
+  ansible.builtin.include_tasks:
+    file: netbox_rack.yml
+    apply:
+      tags:
+        - netbox_rack
+  tags:
+    - netbox_rack
 
 - name: NETBOX_RACK_ROLE TESTS
   ansible.builtin.include_tasks: netbox_rack_role.yml
